--- a/styles.css
+++ b/styles.css
@@ -41,4 +41,8 @@
     padding: 8px;
     border-radius: 10%; 
   }
-  
+  .card-img-top-custom {
+    max-height: 200px;
+    object-fit: cover;
+    width: 100%;
+}
